--- a/final_report/static/css/style.css
+++ b/final_report/static/css/style.css
@@ -1,13 +1,14 @@
 body{
-    background-color: #F7FFF7;
-    color: #343434;
+    background-color: #343434;
 }
 
 #head_div {
     padding: 5px,5px,5px,5px;
-    height: 40px;
+    height: 50px;
     width: 100%;
-    border-bottom: #343434 solid;
+    background-color: #09CEF6;
+    color: white;
+    border-bottom: whitesmoke solid 2px;
     position: absolute;
     top: 0px;
 }
@@ -19,26 +20,39 @@ body{
     margin-right: 200px;
     position: absolute;
 }
-#menu{
-    height: 40px;
-    width: 150px;
-    text-align: center;
-    line-height: 0px;
+#kkbox_logo{
     position: absolute;
-    right: 300px;
-    top: 5px;
+    left: 150px;
+    top: 10px;
 }
-#table_menu{
-    text-align: center;
-    height: 40px;
-    width: 350px;
-}
-
-
 #main{
-    background-color: violet;
-    height: 800px;
+    background-color: whitesmoke;
+    height: 1250px;
     width: 100%;
     position: relative;
     top: 50px;
+}
+#table_div{
+    text-align: center;
+    position: absolute;
+}
+#table_div td{
+    width: 100%;
+    font-size: 25px;
+}
+.button_td{
+    padding: 10px 5px 10px 5px;
+
+}
+.button_link{
+    width: 140px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 20px;
+    background-color: #caf0f8;
+    color: black;
+}
+.button_link:hover{
+    background-color: #219ebc;
+    color: white;
 }
